# corditea

./: .gitignore  README.md  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
corditea/: __init__.py  crop_array.py  impulse_noise_augment.py  intensity_crop.py  lambda_filter.py  lambda_source.py  sum.py
gunpowder/contrib/nodes/: crop_array.py  impulse_noise_augment.py
gunpowder/nodes/: gamma_augment.py  lambda_filter.py  lambda_source.py  random_location_with_integral_mask.py  reject_efficiently.py
gunpowder/tensorflow/nodes/: run.py
scripts/: bench_service.py
src/corditea/: __init__.py  _lsd_backends.py  _lsd_service.py  add_lsd.py  averagedownsample.py  binary_to_instances.py  concatenate.py  crop_array.py  elastic_augment.py  gamma_augment.py  gaussian_noise_augment.py  impulse_noise_augment.py  intensity_crop.py  lambda_filter.py  lambda_source.py  log_batch.py  multiply.py  normalize_output.py  pad.py  random_location_with_integral_mask.py  reject_efficiently.py  sum.py  tf_run.py  threshold.py  unstack.py
tests/: test_add_lsd.py  test_average_downsample.py  test_binary_to_instances.py  test_lsd_backends.py  test_threshold.py
